--- a/app/globals.css
+++ b/app/globals.css
@@ -3,25 +3,51 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --background: #ffffff;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --background: #1f1d2b;
   }
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: var(--background);
+  color: white;
+}
+
+.gradient_text {
+  background: linear-gradient(90.71deg, #73e0a9 0%, #5b68df 30%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.black_bg {
+  background: var(--background);
+}
+
+.btn_gradient {
+  background: linear-gradient(90.71deg, #73e0a9 0%, #5b68df 100%);
+}
+
+.btn_border {
+  border-image: linear-gradient(90.71deg, #73e0a9 0%, #5b68df 100%);
+  border-width: 4px;
+  border-style: solid;
+}
+
+.gradient_border {
+  border: solid 2px transparent;
+  border-radius: 35px;
+  background-image: linear-gradient(#1f1d2b, #1f1d2b),
+    linear-gradient(to right, #73e0a9, #5b68df);
+  background-origin: border-box;
+  background-clip: padding-box, border-box;
+}
+
+.gradient_line {
+  background-image: linear-gradient(to right, #73e0a9, #5b68df);
+  height: 1px;
 }
