--- a/app/globals.css
+++ b/app/globals.css
@@ -18,7 +18,7 @@ body {
 }
 
 .gradient_text {
-  background: linear-gradient(90.71deg, #73e0a9 0%, #5b68df 30%);
+  background: linear-gradient(90.71deg, #73e0a9 0%, #5b68df 100%);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -41,6 +41,15 @@ body {
 .gradient_border {
   border: solid 2px transparent;
   border-radius: 35px;
+  background-image: linear-gradient(#1f1d2b, #1f1d2b),
+    linear-gradient(to right, #73e0a9, #5b68df);
+  background-origin: border-box;
+  background-clip: padding-box, border-box;
+}
+
+.footer_gradient_border {
+  border: solid 2px transparent;
+  border-radius: 8px;
   background-image: linear-gradient(#1f1d2b, #1f1d2b),
     linear-gradient(to right, #73e0a9, #5b68df);
   background-origin: border-box;
